# routes/user-route.js
@@ -1,6 +1,6 @@
 const express = require('express')
 const router  = express.Router()
-const {updateUser,getUser} = require('../controllers/user-controller')
+const {updateUser,getUser,addCommentRating,likeOrRemoveLike,deleteCommentRating,updateCommentRating} = require('../controllers/user-controller')
 const multer  = require('multer')
 const fileFilter = (req, file, cb) => {
     if((file.mimetype).includes('jpeg') || (file.mimetype).includes('png') || (file.mimetype).includes('jpg')){
@@ -28,6 +28,8 @@ router.route('/updateUser').patch(updateUser)
 
 router.route('/getUser').get(getUser)
 
-
-
+router.route('/addCommentAndRating').post(addCommentRating)
+router.route('/like').post(likeOrRemoveLike)
+router.route('/deleteCommentRating').delete(deleteCommentRating)
+router.route('/updateCommentRating').patch(updateCommentRating)
 module.exports = router
